# borf-simp

./: CLAUDE.md  Cargo.toml  DESIGN.md  METACIRCULAR_ROADMAP.md  PARSER_FIXES.md  README.md  package-lock.json
docs/: BORF_SPECIFICATION.md
examples/: borf_example.lang  dsl_with_metaprogramming.borf  interaction_net_example.borf  more_examples.lang  new_syntax_example.borf  standard_lib_example.lang  type_metaprogramming.borf
examples/original/: borf_in_borf.borf  metacircular_evaluator.borf
src/: calculator.rs  extension.ts  lib.rs  main.rs  test_helper.rs
src/prelude/catlab/: catlab.borf
src/prelude/meta/: borf_in_borf.borf  meta.borf
src/prelude/meta/backup/: borf_in_borf.borf
src/prelude/prim/: fallible.borf  prim.borf  seq.borf
src/prelude/syntax/: syntax.borf
src/repl/: interpreter.rs  mod.rs  repl.rs
src/repl/interpreter/: borf.pest  effects.rs  env.rs  errors.rs  evaluator.rs  mod.rs  parser.rs  stack_effects.rs  types.rs
tests/: isolated_tests.rs  parser_tests.rs  standalone_parser_tests.rs
tests/meta/: basic_eval_test.borf  basic_test.borf  bib_test.borf  bib_test.borf.tmp  borf_in_borf_in_borf_test.borf  borf_in_borf_in_borf_test.rs  error_handling_test.borf  expression_test.borf  flp_test.borf  minimal_metaprogramming.borf  nomodule_test.borf  run_tests.rs  self_eval_tests.borf  sequence_test.borf  simple_test.borf
tests/meta/simplified/: bib_test.borf
tests/parser/: ast_tester.rs  grammar_tester.rs  integration_tests.rs  mod.rs  stacker_tester.rs
